3.0.0-alpha.6: replaced factory maps with typed Options