@@ -1,13 +1,16 @@
 plugins {
     id 'org.openjfx.javafxplugin' version '0.0.11' apply false
     id 'org.javamodularity.moduleplugin' version '1.8.10' apply false
+    id 'com.legyver.update-readme-version' version '1.0.0' apply false
+    id 'net.nemerosa.versioning' version '3.0.0' apply false
 }
 
 allprojects {
-    tasks.register("readme") {
-        ant.replaceregexp(match:'version\\: \'(0|[1-9]\\d*)\\.(0|[1-9]\\d*)\\.(0|[1-9]\\d*)(?:-((?:0|[1-9]\\d*|\\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\\.(?:0|[1-9]\\d*|\\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\\+([0-9a-zA-Z-]+(?:\\.[0-9a-zA-Z-]+)*))?', replace: "version: \'${version}", flags:'g', byline:true) {
-            fileset(dir: '.', includes: 'README.md')
-        }
+    apply plugin: 'com.legyver.update-readme-version'
+
+    updateReadmeVersion {
+        versionScheme = "SEMVER"
+        versionSchemeVersion = "2.0"
     }
 }
 
@@ -15,8 +18,8 @@ subprojects {
 
     ext {
         //legyver dependencies
-        legyverCoreVersion = '1.1.2.0'
-        legyverUtilsVersion = '2.1.2.0'
+        legyverCoreVersion = '2.0.0-alpha.1'
+        legyverUtilsVersion = '3.0.0-alpha.1'
         //apache dependencies
         commonsLogVersion = '2.17.1'
         commonsIoVersion = '2.7'
@@ -24,7 +27,7 @@ subprojects {
         //JavaFX
         javaFxVersion ='17.0.2'
         //publishing
-        publishBuildScript = 'https://raw.githubusercontent.com/Legyver/common-build/1.5/publishLibraryModule.gradle' //java 9+ multi-module
+        publishBuildScript = 'https://raw.githubusercontent.com/Legyver/common-build/1.7.1/publishLibraryModule.gradle' //java 9+ multi-module
     }
 
     repositories {
@@ -39,11 +42,5 @@ subprojects {
         version = javaFxVersion
         modules = ['javafx.controls', 'javafx.media', 'javafx.swing', 'javafx.web']
     }
-
-//    tasks.withType(JavaCompile) {
-//        options.compilerArgs.addAll(Arrays.asList(
-//                "--add-exports", "javafx.graphics/com.sun.javafx.tk=com.legyver." + project.name + ".test"
-//        ))
-//    }
 
 }
